feat: endpoint gambar
